test/src/e2e_vm_tests/test_programs/should_fail/dependency_not_at_beginning/src/a_dependency.sw
library;

pub struct Foo { foo: str[3] }
